# maze

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierrc  .prettierrc.yml  404.html  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  LICENSE  README.md  index.html  mkdocs.yml  sitemap.xml  sonar-project.properties  vcpkg-configuration.json  vcpkg.json
game/: CMakeLists.txt  conanfile.txt
game/assets/fonts/: inter.fnt  league-gothic.fnt
game/assets/fonts/league-gothic/: README.md  league-gothic.fnt
game/assets/icons/: README.md  maze.icns
game/assets/models/buddha/: buddha.mtl
game/assets/shaders/: bmtext.frag  infinitegrid.frag  infinitegrid.vert  quad.frag  quad.vert  shader.frag  shader.geom  shader.vert  sprite.frag  sprite.vert  text.frag  text.vert
game/bundle/icons/: maze.icns
game/bundle/resources/: maze.rc.in  version.h.in  version.hpp.in
game/src/: exitlayer.cpp  exitlayer.h  exitlayer.hpp  gamecamera.cpp  gamecamera.h  gamecamera.hpp  globals.h  gridlayer.cpp  gridlayer.hpp  hudlayer.cpp  hudlayer.h  hudlayer.hpp  imguilayer.cpp  imguilayer.h  main.cpp  maze.cpp  maze.h  maze.hpp  mazelayer.cpp  mazelayer.h  mazelayer.hpp  mimallocoverride.cpp  resourcemanager.cpp  resourcemanager.h  resourcemanager.hpp
game/src/layer/: exitlayer.cpp  exitlayer.hpp  gridlayer.cpp  gridlayer.hpp  hudlayer.cpp  hudlayer.hpp  imguilayer.cpp  imguilayer.hpp  introlayer.cpp  introlayer.hpp  mazelayer.cpp  mazelayer.hpp  optionlayer.cpp  optionlayer.hpp  splashscreenlayer.cpp  splashscreenlayer.hpp
game/src/layer/imgui/: imguilayer.cpp  imguilayer.hpp
game/src/scene/: gamecamera.cpp  gamecamera.hpp  gameobject.hpp  light.cpp  light.hpp  orthocamera.cpp  orthocamera.hpp  pointlight.cpp  pointlight.hpp
game/src/thread/: mazeframe.hpp
game/src/ui/: button.cpp  button.h  button.hpp  checkbox.cpp  checkbox.hpp  menufontsize.hpp  menulayout.hpp  selectlist.cpp  selectlist.hpp  yogaconfig.cpp  yogaconfig.hpp
sponge/: CMakeLists.txt  README.md
sponge/bundle/resources/: version.h.in
sponge/src/: entrypoint.hpp  sponge.h  sponge.hpp  spongepch.cpp  spongepch.h  spongepch.hpp
sponge/src/core/: application.hpp  base.cpp  base.h  base.hpp  color.cpp  color.hpp  compiler.h  engine.cpp  engine.h  engine.hpp  file.cpp  file.h  file.hpp  input.cpp  input.h  input.hpp  keycode.h  keycode.hpp  layer.cpp  layer.h  layerstack.cpp  layerstack.h  log.cpp  log.h  logcustom.hpp  logflag.cpp  logflag.h  mousecode.h  mousecode.hpp  settings.cpp  settings.hpp  stringutils.hpp  timer.h  timer.hpp  window.h  window.hpp
sponge/src/debug/: profiler.hpp
sponge/src/event/: applicationevent.h  applicationevent.hpp  event.h  event.hpp  eventdispatcher.h  keyevent.h  keyevent.hpp  mouseevent.h  mouseevent.hpp
sponge/src/graphics/camera/: camera.h  orthocamera.cpp  orthocamera.h
sponge/src/graphics/layer/: layer.cpp  layer.h  layerstack.cpp  layerstack.h
sponge/src/graphics/renderer/: buffer.h  graphicscontext.h  graphicsinfo.h  mesh.h  rendererapi.h  shader.h  sprite.h  texture.h  vertexarray.h
sponge/src/imgui/: imguilayer.cpp  imguilayer.h  imguimanager.cpp  imguimanager.h  imguimanager.hpp  imguinullmanager.cpp  imguinullmanager.h  imguinullmanager.hpp  imguisink.h  imguisink.hpp  sink.hpp
sponge/src/input/: activedevice.hpp  gameaction.hpp  input.h  input.hpp  inputbinding.hpp  inputcontext.hpp  inputsnapshot.cpp  inputsnapshot.hpp  keycode.hpp  mousecode.hpp
sponge/src/input/keyboard/: keycode.hpp
sponge/src/input/mouse/: mousecode.hpp
sponge/src/layer/: layer.cpp  layer.h  layer.hpp  layerstack.cpp  layerstack.h  layerstack.hpp
sponge/src/logging/: log.cpp  log.hpp  logcustom.hpp  logflag.cpp  logflag.hpp
sponge/src/platform/glfw/core/: application.cpp  application.hpp  input.cpp  input.hpp  inputmanager.cpp  window.cpp  (+2 more)
sponge/src/platform/linux/: linuxfile.cpp  linuxfile.h
sponge/src/platform/opengl/: context.cpp  context.hpp  font.cpp  font.hpp  gl.h  gl.hpp  grid.cpp  grid.hpp  indexbuffer.cpp  indexbuffer.hpp  info.cpp  info.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  openglbmfont.cpp  openglbmfont.h  openglbmfontparser.cpp  openglbmfontparser.h  openglbuffer.cpp  openglbuffer.h  openglbuffer.hpp  openglcontext.cpp  openglcontext.h  openglcontext.hpp  openglelementbuffer.cpp  openglelementbuffer.h  openglelementbuffer.hpp  openglfont.cpp  openglfont.h  openglfont.hpp  openglgrid.cpp  openglgrid.hpp  openglindexbuffer.cpp  openglindexbuffer.hpp  openglinfo.cpp  openglinfo.h  openglinfo.hpp  openglmesh.cpp  (+44 more)
sponge/src/platform/osx/: osxfile.cpp  osxfile.h
sponge/src/platform/sdl/: application.cpp  application.hpp  engine.cpp  engine.hpp  info.cpp  info.hpp  sdlengine.cpp  sdlengine.h  sdlengine.hpp  sdlinput.cpp  sdlinput.h  sdlinput.hpp  sdlwindow.cpp  sdlwindow.h  sdlwindow.hpp  window.cpp  window.hpp
sponge/src/platform/windows/: winfile.cpp  winfile.h  winfile.hpp
sponge/src/renderer/: buffer.h  buffer.hpp  camera.h  camera.hpp  font.cpp  font.hpp  graphicscontext.h  graphicsinfo.h  mesh.cpp  mesh.h  orthocamera.cpp  orthocamera.h  orthocamera.hpp  rendererapi.h  rendererapi.hpp  shader.h  shader.hpp  sprite.h  texture.h  texture.hpp  vertexarray.h  vertexarray.hpp
sponge/src/renderer/opengl/: gl.h  openglbuffer.cpp  openglbuffer.h  openglcontext.cpp  openglcontext.h  openglelementbuffer.cpp  openglelementbuffer.h  openglfont.cpp  openglfont.h  openglinfo.cpp  openglinfo.h  openglmesh.cpp  openglmesh.h  openglmodel.cpp  openglmodel.h  openglquad.cpp  openglquad.h  openglrendererapi.cpp  openglrendererapi.h  openglresourcemanager.cpp  openglresourcemanager.h  openglshader.cpp  openglshader.h  openglsprite.cpp  openglsprite.h  opengltexture.cpp  opengltexture.h  openglvertexarray.cpp  openglvertexarray.h
sponge/src/scene/: camera.h  camera.hpp  font.cpp  font.hpp  fontatlas.cpp  fontatlas.hpp  mesh.cpp  mesh.hpp  orthocamera.cpp  orthocamera.h  orthocamera.hpp  sprite.hpp
sponge/src/thread/: renderthread.cpp  renderthread.hpp  updatethread.cpp  updatethread.hpp  worker.cpp  worker.hpp
(+237 files in other folders)
